[package]
name = "ToolServe"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-extract = "0.7.10"
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde_json = "*"
serde = { version = "1.0.210", features = ["derive"] }
futures-util = "0.3.31"
uuid = {version = "1.11.0",features = ["v4","fast-rng","macro-diagnostics",]}
bytes = "1.7.2"
